# AcTrail

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/adapters/collectors/ebpf/: Cargo.toml  build.rs
crates/adapters/collectors/ebpf/bpf/: actrail_file.h  actrail_helpers.h  actrail_net.h  actrail_proc.h  actrail_runtime.h  actrail_suppressed_fd.h  actrail_tls_payload.h  actrail_uprobe_regs.h  live_observation.bpf.c
crates/adapters/collectors/ebpf/src/: capability_probe.rs  decode.rs  lib.rs  loader.rs  maps.rs  process_context.rs  procfs.rs  sensors.rs  tests.rs
crates/adapters/control/uds/server/: Cargo.toml
crates/adapters/control/uds/transport/: Cargo.toml
crates/adapters/policy/plugin_host/: Cargo.toml
crates/adapters/policy/plugin_host/src/: decisions.rs  engine.rs  errors.rs  lib.rs  loader.rs  registry.rs
crates/adapters/provider/rule_set/: Cargo.toml
crates/adapters/provider/rule_set/src/: classifier.rs  config.rs  evidence_map.rs  lib.rs  loader.rs  rules.rs
crates/adapters/storage/sqlite/: Cargo.toml
crates/adapters/storage/sqlite/src/: lib.rs  query.rs  records.rs  retention.rs  schema.rs  semantic_actions.rs  writer.rs
crates/apps/cluster/: Cargo.toml
crates/apps/cluster/src/: lib.rs
crates/apps/ctl/: Cargo.toml  build.rs
crates/apps/ctl/src/: args.rs  clean.rs  dispatch.rs  entry.rs  launch.rs  lib.rs  output.rs  platform_probe.rs  process_ref.rs  tls_plan.rs  transport.rs
crates/apps/ctl/src/launch/: controlled.rs  java_agent.rs  permission_policy.rs  seccomp.rs  seccomp_mode.rs  suppress.rs  sync.rs  timing.rs
crates/apps/daemon/: Cargo.toml
crates/apps/daemon/src/: bootstrap.rs  control_loop.rs  ebpf_resolve.rs  lib.rs  peer_identity.rs  profiles.rs  runtime_wiring.rs  service_host.rs  services.rs  socket_loop.rs
crates/apps/daemon/src/services/: application_protocol.rs  attach.rs  command_control.rs  control_runtime.rs  live.rs  network_control.rs  payload.rs  payload_gate.rs  resource_metrics.rs  retention.rs  semantic_actions.rs  tests.rs  wiring.rs
crates/apps/view/: Cargo.toml
crates/apps/view/src/: command.rs  lib.rs  storage.rs  table.rs
crates/apps/view/src/storage/: export_file.rs  export_json.rs  export_otel.rs  render.rs  source.rs
crates/apps/web/: Cargo.toml  build.rs
crates/apps/web/backup/: args.rs  http.rs  json.rs  main.rs  render.rs  view.rs
crates/apps/web/backup/view/: events.rs  payloads.rs
crates/apps/web/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
crates/apps/web/frontend/src/: App.vue  api.js  main.js  styles.css
crates/apps/web/src/: analysis.rs  args.rs  http.rs  json.rs  lib.rs  render.rs  sqlite_read.rs  tests.rs  trace_data.rs  view.rs
crates/apps/web/src/http/: alerts.rs  plugins.rs  query.rs
crates/apps/web/src/plugins/: catalog.rs  mod.rs  package.rs  render.rs
crates/apps/web/src/render/: app.css  app.js  index.html
crates/apps/web/src/view/: action_tree_projection.rs  action_tree_roles.rs  actions.rs  alerts.rs  cluster.rs  commands.rs  events.rs  payloads.rs  projection_cache.rs  runtime_config.rs  stats.rs  topology.rs  traces.rs
crates/contracts/collector/instance/: Cargo.toml
crates/contracts/collector/instance/src/: lib.rs
crates/core/attach_runtime/: Cargo.toml
crates/core/attach_runtime/src/: bootstrap.rs  coverage_guard.rs  identity_merge.rs  lib.rs  snapshot_merge.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: capture_profile.rs  daemon.rs  export.rs  framework.rs  lib.rs  policy.rs  provider_rules.rs  retention.rs  trace_snapshot.rs
crates/core/config/src/capture_profile/: permission.rs
crates/core/config/src/daemon/: agent.rs  application.rs  cluster.rs  command.rs  enforcement.rs  live_otel_export.rs  network.rs  operator.rs  payload.rs  process.rs  resource.rs  values.rs
crates/core/ingest_runtime/: Cargo.toml
crates/core/ingest_runtime/src/: classify.rs  diagnostics.rs  lib.rs  match_event.rs  normalize.rs  policy_gate.rs
crates/core/plugin_system/: Cargo.toml
crates/core/plugin_system/src/: alert.rs  control.rs  diagnostics.rs  grants.rs  lib.rs  llm_codec.rs  manifest.rs  observation.rs  runtime.rs  status.rs
crates/core/plugin_system/src/manifest/: declarations.rs  limits.rs  mod.rs  types.rs  validation.rs
crates/core/plugin_system/wit/: actrail-plugin.wit
crates/core/plugin_wasm_runtime/: Cargo.toml
crates/core/plugin_wasm_runtime/src/: codec.rs  component_control.rs  component_observation.rs  control.rs  engine.rs  host.rs  lib.rs  memory.rs  observation.rs
crates/core/plugin_wasm_runtime/src/component_observation/: alert_host.rs  consumer.rs  host.rs  mod.rs  post_trace_host.rs  wire.rs
crates/core/semantic_action_runtime/: Cargo.toml
crates/core/semantic_action_runtime/src/: lib.rs  lineage_projection.rs  live.rs  payload_projection.rs  snapshot.rs
crates/export/factory/: Cargo.toml
crates/export/factory/src/: builder.rs  config.rs  lib.rs  parser.rs
crates/recording/runtime/: Cargo.toml
crates/recording/runtime/src/: commit.rs  diagnostics.rs  lib.rs  observed.rs  transaction.rs  writer.rs
crates/storage/adapters/sqlite/: Cargo.toml
crates/storage/core/: Cargo.toml
crates/storage/core/src/: backend.rs  error.rs  lib.rs  transaction.rs
crates/tools/ebpf_probe/: Cargo.toml
crates/tools/ebpf_probe/src/: args.rs  entry.rs  lib.rs  main.rs  probe_config.rs  report.rs  verify.rs  workload.rs
crates/tools/tls_payload_probe/: Cargo.toml  README.md  build.rs
crates/tools/tls_payload_probe/bpf/: tls_payload_probe.bpf.c  tls_payload_probe_capture.h  tls_payload_probe_helpers.h  tls_payload_probe_maps.h  tls_payload_probe_types.h
crates/tools/tls_payload_probe/src/: lib.rs
crates/tools/tls_payload_probe_sync/: Cargo.toml  README.md
crates/tools/tls_payload_probe_sync/src/: lib.rs  runtime.rs
examples/plugins/wit-component/file-leakage/: Cargo.toml  README.md  README.zh.md  file-leakage.config.json  file-leakage.config.v1.schema.json  file-leakage.payload.v1.schema.json  file-leakage.plugin.toml
(+1302 files in other folders)
