[workspace]
members = [
    "crates/apps/daemon",
    "crates/apps/ctl",
    "crates/apps/view",
    "crates/apps/web",
    "crates/core/model",
    "crates/core/linux_platform",
    "crates/core/config",
    "crates/core/semantic_action_runtime",
    "crates/core/trace_runtime",
    "crates/core/attach_runtime",
    "crates/core/ingest_runtime",
    "crates/core/tls_payload_sync",
    "crates/core/plugin_system",
    "crates/core/plugin_wasm_runtime",
    "crates/plugin/abi",
    "crates/contracts/collector/binding",
    "crates/contracts/collector/capability",
    "crates/contracts/collector/event",
    "crates/contracts/collector/instance",
    "crates/contracts/collector/stats",
    "crates/contracts/control_plane",
    "crates/contracts/graph",
    "crates/contracts/payload/binding",
    "crates/contracts/payload/capability",
    "crates/contracts/payload/event",
    "crates/contracts/policy/evaluate",
    "crates/contracts/process/identity",
    "crates/contracts/process/tree_snapshot",
    "crates/contracts/provider_label/evidence",
    "crates/contracts/provider_label/label",
    "crates/contracts/store/read",
    "crates/contracts/store/write",
    "crates/contracts/store/snapshot",
    "crates/contracts/store/retention",
    "crates/contracts/store/tx",
    "crates/storage/core",
    "crates/contracts/semantic_action",
    "crates/export/adapters/otel_codec",
    "crates/export/adapters/otel_jsonl",
    "crates/export/core",
    "crates/export/factory",
    "crates/recording/runtime",
    "crates/adapters/collectors/ebpf",
    "crates/adapters/control/uds/client",
    "crates/adapters/control/uds/server",
    "crates/adapters/control/uds/transport",
    "crates/adapters/export/json_graph",
    "crates/adapters/export/otel",
    "crates/adapters/provider/rule_set",
    "crates/storage/factory",
    "crates/storage/adapters/sqlite",
    "crates/tools/ebpf_probe",
    "crates/tools/tls_probe_point_finder",
    "crates/tools/tls_payload_core",
    "crates/tools/tls_payload_probe",
    "crates/tools/tls_payload_probe_sync",
    "crates/tools/sqlite_inspect",
    "crates/tools/graph_inspect",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
rust-version = "1.90"
