[package]
name = "cluster"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[[bin]]
name = "actrailcluster"
path = "src/bin/actrailcluster.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
config_core = { path = "../../core/config" }
json_graph_export = { path = "../../adapters/export/json_graph" }
model_core = { path = "../../core/model" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
