[package]
name = "daemon"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[features]
default = []
perf-buffer = ["ebpf_collector/perf-buffer"]

[dependencies]
alert_contract = { path = "../../contracts/alert" }
attach_runtime = { path = "../../core/attach_runtime" }
clap = { version = "4.6", features = ["derive"] }
collector_binding = { path = "../../contracts/collector/binding" }
collector_capability = { path = "../../contracts/collector/capability" }
collector_event = { path = "../../contracts/collector/event" }
collector_instance = { path = "../../contracts/collector/instance" }
control_contract = { path = "../../contracts/control_plane" }
config_core = { path = "../../core/config" }
ebpf_collector = { path = "../../adapters/collectors/ebpf" }
export_core = { path = "../../export/core" }
export_factory = { path = "../../export/factory" }
ingest_runtime = { path = "../../core/ingest_runtime" }
libc = "0.2"
linux_platform = { path = "../../core/linux_platform" }
model_core = { path = "../../core/model" }
payload_event = { path = "../../contracts/payload/event" }
plugin_system = { path = "../../core/plugin_system" }
plugin_wasm_runtime = { path = "../../core/plugin_wasm_runtime" }
process_identity = { path = "../../core/process_identity" }
process_tree_snapshot_contract = { path = "../../contracts/process/tree_snapshot" }
provider_evidence = { path = "../../contracts/provider_label/evidence" }
provider_label = { path = "../../contracts/provider_label/label" }
recording_runtime = { path = "../../recording/runtime" }
rule_set_provider = { path = "../../adapters/provider/rule_set" }
semantic_action = { path = "../../contracts/semantic_action" }
semantic_action_runtime = { path = "../../core/semantic_action_runtime" }
jsonschema = { version = "0.46.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
trace_runtime = { path = "../../core/trace_runtime" }
tls_payload_core = { path = "../../tools/tls_payload_core" }
tls_payload_sync = { path = "../../core/tls_payload_sync" }
tls_probe_point_finder = { path = "../../tools/tls_probe_point_finder" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
toml = "0.8"
uds_control_server = { path = "../../adapters/control/uds/server" }
uds_control_client = { path = "../../adapters/control/uds/client" }
