[package]
name = "view"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
config_core = { path = "../../core/config" }
json_graph_export = { path = "../../adapters/export/json_graph" }
model_core = { path = "../../core/model" }
otel_export = { path = "../../adapters/export/otel" }
semantic_action = { path = "../../contracts/semantic_action" }
serde_json = "1"
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
