[package]
name = "web"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"
build = "build.rs"

[[bin]]
name = "actrailweb"
path = "src/main.rs"

[dependencies]
config_core = { path = "../../core/config" }
model_core = { path = "../../core/model" }
semantic_action = { path = "../../contracts/semantic_action" }
sqlite_storage = { path = "../../adapters/storage/sqlite" }
store_read_contract = { path = "../../contracts/store/read" }
store_snapshot_contract = { path = "../../contracts/store/snapshot" }

[dev-dependencies]
store_write_contract = { path = "../../contracts/store/write" }
