[package]
name = "web"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"
build = "build.rs"

[[bin]]
name = "actrailweb"
path = "src/main.rs"

[dependencies]
config_core = { path = "../../core/config" }
model_core = { path = "../../core/model" }
semantic_action = { path = "../../contracts/semantic_action" }
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
flate2 = "1.1"
