[package]
name = "web"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"
build = "build.rs"

[[bin]]
name = "actrailweb"
path = "src/main.rs"

[dependencies]
alert_contract = { path = "../../contracts/alert" }
config_core = { path = "../../core/config" }
control_contract = { path = "../../contracts/control_plane" }
model_core = { path = "../../core/model" }
plugin_system = { path = "../../core/plugin_system" }
semantic_action = { path = "../../contracts/semantic_action" }
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
uds_control_client = { path = "../../adapters/control/uds/client" }
flate2 = "1.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
