[package]
name = "attach_runtime"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
collector_binding = { path = "../../contracts/collector/binding" }
collector_event = { path = "../../contracts/collector/event" }
collector_instance = { path = "../../contracts/collector/instance" }
config_core = { path = "../config" }
model_core = { path = "../model" }
process_identity = { path = "../process_identity" }
process_tree_snapshot_contract = { path = "../../contracts/process/tree_snapshot" }
trace_runtime = { path = "../trace_runtime" }
