[package]
name = "plugin_wasm_runtime"
version.workspace = true
rust-version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
model_core = { path = "../model" }
plugin_system = { path = "../plugin_system" }
semantic_action = { path = "../../contracts/semantic_action" }
serde_json = "1.0"
wasmtime = { version = "41.0.0", default-features = false, features = ["component-model", "cranelift", "runtime", "std", "wat"] }
