[package]
name = "semantic_action_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
config_core = { path = "../config" }
model_core = { path = "../model" }
semantic_action = { path = "../../contracts/semantic_action" }
serde_json = "1"
store_snapshot_contract = { path = "../../contracts/store/snapshot" }
