[package]
name = "semantic_action_runtime"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
config_core = { path = "../config" }
libc = "0.2"
model_core = { path = "../model" }
semantic_action = { path = "../../contracts/semantic_action" }
serde_json = "1"
sha2 = "0.10"
