[package]
name = "export_factory"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
export_core = { path = "../core" }
export_otel_jsonl = { path = "../adapters/otel_jsonl" }
plugin_wasm_runtime = { path = "../../core/plugin_wasm_runtime" }
plugin_system = { path = "../../core/plugin_system" }
