[package]
name = "storage_core"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
alert_contract = { path = "../../contracts/alert" }
model_core = { path = "../../core/model" }
semantic_action = { path = "../../contracts/semantic_action" }
store_read_contract = { path = "../../contracts/store/read" }
store_retention_contract = { path = "../../contracts/store/retention" }
store_snapshot_contract = { path = "../../contracts/store/snapshot" }
store_tx_contract = { path = "../../contracts/store/tx" }
store_write_contract = { path = "../../contracts/store/write" }
