[package]
name = "ebpf_probe"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
config_core = { path = "../../core/config" }
control_contract = { path = "../../contracts/control_plane" }
daemon = { path = "../../apps/daemon" }
libc = "0.2"
model_core = { path = "../../core/model" }
storage_core = { path = "../../storage/core" }
storage_factory = { path = "../../storage/factory" }
uds_control_transport = { path = "../../adapters/control/uds/transport" }
