[package]
name = "plugin_policy_host"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
model_core = { path = "../../../core/model" }
policy_evaluate_contract = { path = "../../../contracts/policy/evaluate" }
policy_plugin_contract = { path = "../../../contracts/policy/plugin" }
