[package]
name = "rule_set_provider"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
config_core = { path = "../../../core/config" }
provider_evidence = { path = "../../../contracts/provider_label/evidence" }
provider_label = { path = "../../../contracts/provider_label/label" }
