[package]
name = "actrail-file-leakage-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
wee_alloc = { version = "0.4", default-features = false }
wit-bindgen = { version = "=0.57.1", default-features = false, features = ["macros", "realloc"] }

[workspace]
