[package]
name = "uds_control_transport"
version.workspace = true
edition = "2024"
license = "MulanPSL-2.0"

[dependencies]
control_contract = { path = "../../../../contracts/control_plane" }
model_core = { path = "../../../../core/model" }
plugin_system = { path = "../../../../core/plugin_system" }
